--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>HI</h1>
+<h3>hi</h3>
+<div id="git"></div>
+<div id="list"></div>
 <script src = 'script.js'></script>
 </body>
 </html>
